--- a/src/app/modules/full-layout/modules/account/pages/account-personal-info/account-personal-info.page.html
+++ b/src/app/modules/full-layout/modules/account/pages/account-personal-info/account-personal-info.page.html
@@ -58,6 +58,9 @@
 					<a href="#" class="h6 title">Friend Requests</a>
 					<a href="#" class="items-round-little bg-blue">4</a>
 				</div>
+				<div class="ui-block-title">
+					<a href="#" class="h6 title">Delete Account</a>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -247,6 +250,9 @@
 					<div class="ui-block-title">
 						<a href="#" class="h6 title">Friend Requests</a>
 						<a href="#" class="items-round-little bg-blue">4</a>
+					</div>
+					<div class="ui-block-title">
+						<a href="#" class="h6 title">Delete Account</a>
 					</div>
 				</div>
 			</div>
