--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -3,7 +3,7 @@
 <header class="header" id="site-header">
 
 	<div class="page-title">
-		<h6>YELLOW PLANE</h6>
+		<h6>YELLOPLANE</h6>
 	</div>
 
 	<div class="header-content-wrapper">
