--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,19 +3,19 @@
 <div class="fixed-sidebar">
 	<div class="fixed-sidebar-left sidebar--small" id="sidebar-left">
 		<a href clickStopPropagation class="logo">
-			<img src="/assets/img/logo.png" alt="Yellow Post">
+			<img src="/assets/img/logo.png" alt="YelloPlane">
 		</a>
 
 		<div class="mCustomScrollbar" data-mcs-theme="dark">
 			<ul class="left-menu">
 				<li>
-					<a href clickStopPropagation class="js-sidebar-open">
-						<svg class="olymp-menu-icon left-menu-icon" placement="right" ngbTooltip="OPEN MENU"><use xlink:href="/assets/icons/icons.svg#olymp-menu-icon"></use></svg>
+					<a href clickStopPropagation class="js-sidebar-open" placement="auto" ngbTooltip="OPEN MENU">
+						<svg class="olymp-menu-icon left-menu-icon"><use xlink:href="/assets/icons/icons.svg#olymp-menu-icon"></use></svg>
 					</a>
 				</li>
 				<li>
-					<a [routerLink]="['/home']">
-						<svg class="olymp-newsfeed-icon left-menu-icon" placement="right" ngbTooltip="NEWSFEED"><use xlink:href="/assets/icons/icons.svg#olymp-newsfeed-icon"></use></svg>
+					<a [routerLink]="['/home']" placement="auto" ngbTooltip="NEWSFEED">
+						<svg class="olymp-newsfeed-icon left-menu-icon"><use xlink:href="/assets/icons/icons.svg#olymp-newsfeed-icon"></use></svg>
 					</a>
 				</li>
 			</ul>
@@ -24,21 +24,21 @@
 
 	<div class="fixed-sidebar-left sidebar--large" id="sidebar-left-1">
 		<a href clickStopPropagation class="logo">
-			<img src="/assets/img/logo.png" alt="Yellow Post">
-			<h6 class="logo-title">yellow plane</h6>
+			<img src="/assets/img/logo.png" alt="YelloPlane">
+			<h6 class="logo-title">yelloplane</h6>
 		</a>
 
 		<div class="mCustomScrollbar" data-mcs-theme="dark">
 			<ul class="left-menu">
 				<li>
-					<a href clickStopPropagation class="js-sidebar-open" >
-						<svg class="olymp-close-icon left-menu-icon" placement="right" ngbTooltip="OPEN MENU"><use xlink:href="/assets/icons/icons.svg#olymp-close-icon"></use></svg>
+					<a href clickStopPropagation class="js-sidebar-open" placement="auto" ngbTooltip="OPEN MENU">
+						<svg class="olymp-close-icon left-menu-icon"><use xlink:href="/assets/icons/icons.svg#olymp-close-icon"></use></svg>
 						<span class="left-menu-title">Close Menu</span>
 					</a>
 				</li>
 				<li>
-					<a [routerLink]="['/home']">
-						<svg class="olymp-newsfeed-icon left-menu-icon" placement="right" ngbTooltip="NEWSFEED"><use xlink:href="/assets/icons/icons.svg#olymp-newsfeed-icon"></use></svg>
+					<a [routerLink]="['/home']" placement="auto" ngbTooltip="NEWSFEED">
+						<svg class="olymp-newsfeed-icon left-menu-icon"><use xlink:href="/assets/icons/icons.svg#olymp-newsfeed-icon"></use></svg>
 						<span class="left-menu-title">Newsfeed</span>
 					</a>
 				</li>
@@ -56,28 +56,28 @@
 
 	<div class="fixed-sidebar-left sidebar--small" id="sidebar-left-responsive">
 		<a href clickStopPropagation class="logo js-sidebar-open">
-			<img src="/assets/img/logo.png" alt="Yellow Post">
+			<img src="/assets/img/logo.png" alt="YelloPlane">
 		</a>
 
 	</div>
 
 	<div class="fixed-sidebar-left sidebar--large" id="sidebar-left-1-responsive">
 		<a href clickStopPropagation class="logo">
-			<img src="/assets/img/logo.png" alt="Yellow Post">
-			<h6 class="logo-title">yellow plane</h6>
+			<img src="/assets/img/logo.png" alt="YelloPlane">
+			<h6 class="logo-title">yelloplane</h6>
 		</a>
 
 		<div class="mCustomScrollbar" data-mcs-theme="dark">
 			<ul class="left-menu">
 				<li>
 					<a href clickStopPropagation class="js-sidebar-open">
-						<svg class="olymp-close-icon left-menu-icon" placement="right" ngbTooltip="OPEN MENU"><use xlink:href="/assets/icons/icons.svg#olymp-close-icon"></use></svg>
+						<svg class="olymp-close-icon left-menu-icon" placement="auto" ngbTooltip="OPEN MENU"><use xlink:href="/assets/icons/icons.svg#olymp-close-icon"></use></svg>
 						<span class="left-menu-title">Close Menu</span>
 					</a>
 				</li>
 				<li>
 					<a [routerLink]="['/home']">
-						<svg class="olymp-newsfeed-icon left-menu-icon" placement="right" ngbTooltip="NEWSFEED"><use xlink:href="/assets/icons/icons.svg#olymp-newsfeed-icon"></use></svg>
+						<svg class="olymp-newsfeed-icon left-menu-icon" placement="auto" ngbTooltip="NEWSFEED"><use xlink:href="/assets/icons/icons.svg#olymp-newsfeed-icon"></use></svg>
 						<span class="left-menu-title">Newsfeed</span>
 					</a>
 				</li>
