--- a/src/scss/blocks/_news-feed-form.scss
+++ b/src/scss/blocks/_news-feed-form.scss
@@ -2,7 +2,6 @@
 
 
 .news-feed-form {
-  overflow: hidden;
 
   .nav-tabs .nav-link {
 	padding: 20px;
@@ -48,6 +47,25 @@
   .form-group.label-floating.is-focused .control-label,
   .form-group.label-floating.has-bootstrap-select .control-label {
 	top: 16px;
+  }
+
+  .action-buttons {
+  	display: flex;
+  	flex-direction:row;
+  	justify-content:center;
+  	align-items:center;
+  	float: right;
+
+  	.action-btn {
+  		margin-right: 15px;
+  	}
+  	.action-btn:last-child {
+  		margin-right: 0;
+  	}
+  }
+
+  .add-options-message {
+  	float: none;
   }
 
   .options-message {
