--- a/src/scss/blocks/_registration-login-form.scss
+++ b/src/scss/blocks/_registration-login-form.scss
@@ -71,8 +71,13 @@
 	margin-bottom: 0;
   }
 
+  .form-group {
+  	.form-control {
+  		margin-bottom: 1rem;
+  	}
+  }
+
   p {
-	margin-bottom: 0;
 	font-size: 13px;
   }
 
