--- a/src/scss/lib.scss
+++ b/src/scss/lib.scss
@@ -1,5 +1,6 @@
 /*------------- #LIB --------------*/
 
+@import "~bootstrap/scss/bootstrap";
 @import '~swiper/dist/css/swiper.min.css';
 @import "~@ng-select/ng-select/themes/default.theme.css";
 
