--- a/src/scss/yc-theme/_bootstrap-customization.scss
+++ b/src/scss/yc-theme/_bootstrap-customization.scss
@@ -1,15 +1,12 @@
 /*------------- #BOOTSTRAP-CUSTOMIZATION --------------*/
 
-body{
-  color: #888da8;
-}
-
 ul {
   list-style: none;
   padding: 0;
 }
 
 a {
+  color: $body-color;
   transition: all .15s ease;
 
   &:hover {
@@ -55,6 +52,14 @@ p {
 
 .nav-tabs .nav-item {
   position: relative;
+}
+
+.nav-pills {
+  .nav-item {
+    .nav-link {
+      //color: $body-color;
+    }
+  }
 }
 
 .form-group {
@@ -178,11 +183,15 @@ button.btn {
     bottom: 0;
     left: 50%;
     width: auto;
-  }
-}
 
-.swiper-pagination-bullet {
-  border: 2px solid $body-color;
+    .swiper-pagination-bullet {
+      border: 2px solid $body-color;
+    }
+
+    .swiper-pagination-bullet-active {
+      border: 0;
+    }
+  }
 }
 
 @media (max-width: 576px){
