--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -79,6 +79,14 @@
 									</a>
 								</li>
 								<li>
+									<a [routerLink]="['/circles']">
+
+										<svg class="olymp-menu-icon"><use xlink:href="/assets/icons/icons.svg#olymp-badge-icon"></use></svg>
+
+										<span>Circles</span>
+									</a>
+								</li>
+								<li>
 									<a (click)="logout()" href>
 										<svg class="olymp-logout-icon"><use xlink:href="/assets/icons/icons.svg#olymp-logout-icon"></use></svg>
 
