--- a/src/scss/blocks/_helper.scss
+++ b/src/scss/blocks/_helper.scss
@@ -249,27 +249,27 @@
 }
 
 .c-white {
-  color: $white-color;
+  color: $white-color !important;
 }
 
 .c-grey {
-  color: $body-font-color;
+  color: $body-font-color !important;
 }
 
 .c-orange {
-  color: $orange;
+  color: $orange !important;
 }
 
 .c-secondary {
-  color: $secondary-color;
+  color: $secondary-color !important;
 }
 
 .c-yellow {
-  color: $yellow;
+  color: $yellow !important;
 }
 
 .c-purple {
-  color: $purple;
+  color: $purple !important;
 }
 
 .c-green {
