--- a/src/scss/lib.scss
+++ b/src/scss/lib.scss
@@ -1,13 +1,5 @@
 /*------------- #LIB --------------*/
-
+@import "yc-theme/_bootstrap-variables";
 @import "~bootstrap/scss/bootstrap";
 @import '~swiper/dist/css/swiper.min.css';
 @import "~@ng-select/ng-select/themes/default.theme.css";
-
-// @import "lib/bootstrap-select.scss";
-// @import "lib/daterangepicker.scss";
-// @import "lib/fullcalendar.scss";
-// @import "lib/jquery.mCustomScrollbar.min.scss";
-// @import "lib/magnific-popup.scss";
-// @import "lib/simplecalendar.scss";
-// @import "lib/swiper.min.scss";
